# encolor

./: README.md  pyproject.toml
encolor/: __main__.py  gfx.py  sub.py  utils.py
examples/: colors.py  syntax.py
