[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "encolor"
version = "0.1.0"
authors = [
  { name="Froloket64", email="gh@froloket.anonaddy.com" },
]
description = "Easily automate colorizing terminal output"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://github.com/Froloket64/encolor"
"Bug Tracker" = "https://github.com/Froloket64/encolor/issues"

[project.scripts]
encolor = "encolor.__main__:main"
